...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ICX-79-MGm">
                                <rect key="frame" x="116" y="494" width="158" height="40"/>
                                <color key="backgroundColor" red="0.078431372549019607" green="0.15686274509803921" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="MvL-pF-o6R"/>
                                </constraints>
                                <state key="normal" title="Check weather"/>
                                <connections>
                                    <action selector="checkWeatherBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GZn-An-J2y"/>
                                    <segue destination="KlP-Lr-89s" kind="show" id="8wo-2o-xSD"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KLH-k2-gmG">
                                <rect key="frame" x="116" y="388" width="158" height="40"/>
                                <color key="backgroundColor" red="0.078431372549019607" green="0.15686274509803921" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="RLl-Y5-CDW"/>
                                </constraints>
                                <color key="tintColor" red="0.0088631547989999997" green="0.47580283880000002" blue="0.91113907100000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="My location"/>
                                <connections>
                                    <action selector="myLocationBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sxj-yL-vsI"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your city" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HmL-XQ-KI3">
                                <rect key="frame" x="60" y="265" width="270" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="lPI-VM-XL1"/>
                                    <constraint firstAttribute="width" constant="293" id="vPC-gw-A9T"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
